2014-10-06  Philip Chimento  <philip.chimento@gmail.com>

        webkit-gtk fails to link JavaScriptCore, missing symbols add_history and readline
        https://bugs.webkit.org/show_bug.cgi?id=127059

        Reviewed by Carlos Garcia Campos.

        * GNUmakefile.am: add -ledit to jsc link args on OS_DARWIN.

2014-04-15  Filip Pizlo  <fpizlo@apple.com>

        Unreviewed, add the obvious thing that marks MakeRope as exiting since it can exit.

        * dfg/DFGAbstractInterpreterInlines.h:
        (JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):

2014-08-18  Diego Pino Garcia  <dpino@igalia.com>

        Completed iterator can be revived by adding more than one new entry to the target object
        https://bugs.webkit.org/show_bug.cgi?id=129993

        Reviewed by Oliver Hunt.

        When iterator reaches end, finish iterator.

        * runtime/JSMapIterator.h:
        (JSC::JSMapIterator::finish):
        * runtime/JSSetIterator.h:
        (JSC::JSSetIterator::finish):
        * runtime/MapData.h:
        (JSC::MapData::const_iterator::finish): set index of iterator to max
        Int32.
        * runtime/MapIteratorPrototype.cpp:
        (JSC::MapIteratorPrototypeFuncNext):
        * runtime/SetIteratorPrototype.cpp:
        (JSC::SetIteratorPrototypeFuncNext):

2014-07-04  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] [Stable] Crash while playing a video
        https://bugs.webkit.org/show_bug.cgi?id=133940

        Unreviewed. Rolling out r160688.

        * jit/CCallHelpers.h:
        * jit/Repatch.cpp:
        (JSC::generateProtoChainAccessStub):
        (JSC::tryBuildGetByIDList):

2014-05-19  Mark Lam  <mark.lam@apple.com>

        operationOptimize() should defer the GC for a while.
        <https://webkit.org/b/133103>

        Reviewed by Filip Pizlo.

        Currently, operationOptimize() only defers the GC until its end.  As a result,