@@ -1,3 +1,14 @@
+2014-08-19  Magnus Granberg  <zorry@gentoo.org>
+
+        TEXTREL in libjavascriptcoregtk-1.0.so.0.11.0 on x86 (or i586)
+        https://bugs.webkit.org/show_bug.cgi?id=70610
+
+        Reviewed by Darin Adler.
+
+        Add PLT if we're building with PIC.
+
+        * wtf/InlineASM.h:
+
 2015-04-07  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Fix the build with newer GLib.
