@@ -1,3 +1,14 @@
+2014-08-19  Magnus Granberg  <zorry@gentoo.org>
+
+        TEXTREL in libjavascriptcoregtk-1.0.so.0.11.0 on x86 (or i586)
+        https://bugs.webkit.org/show_bug.cgi?id=70610
+
+        Reviewed by Darin Adler.
+
+        Setup %ebx so we can use the plt.
+
+        * jit/ThunkGenerators.cpp:
+
 2014-10-06  Philip Chimento  <philip.chimento@gmail.com>
 
         webkit-gtk fails to link JavaScriptCore, missing symbols add_history and readline
